--- a/helloworld/src/main/java/helloworld/BUILD
+++ b/helloworld/src/main/java/helloworld/BUILD
@@ -1,5 +1,5 @@
 java_binary(
-    name = "hello-world",
+    name = "helloworld",
     srcs = glob(["*.java"]),
     main_class = "helloworld.HelloWorld",
     deps = [
